<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context="com.quanzhilian.qzlscan.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <TextView
        style="@style/login_logo_down_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="全纸联纸易云物料扫码管理"
        />

    <EditText
        android:id="@+id/login_account"
        style="@style/login_item_context"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_edittext"
        android:hint="@string/login_user_name"
        android:paddingRight="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_pwd"
        style="@style/login_item_context"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_login_click"
        style="@style/button_context_white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textStyle="bold" />
</LinearLayout>